# Master-Thesis-Data-Processing

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
data/GTFS/: agency.txt  calendar.txt  calendar_dates.txt  routes.txt  stop_times.txt  stops.txt  transfers.txt
data/dgm/: dgm1.meta4
data/dsm/: dsm.meta4
data/evaluation/: Zensus2022_Anteil_Auslaender_100m-Gitter.csv  Zensus2022_Anteil_ueber_65_100m-Gitter.csv  Zensus2022_Anteil_unter_18_100m-Gitter.csv  Zensus2022_Bevoelkerungszahl_100m-Gitter.csv  evaluation_raster_percentage_of_foreigners.parquet  evaluation_raster_percentage_of_people_over_65.parquet  evaluation_raster_percentage_of_people_under_18.parquet  evaluation_raster_population.parquet  poi_evaluation.csv  shadow_evaluation.parquet
data/lcz/: lcz_v3.tif
data/osm_features/: bamberg_osm_features.parquet
data/tags/: culture.csv  education.csv  healthcare.csv  outdoor.csv  physical.csv  restaurant.csv  services.csv  supplies.csv  (+1 more)
docker/: Dockerfile  docker-entrypoint.sh  frontend.Dockerfile
evaluation/: AverageEvaluation.ipynb  GeographicalQuestions.ipynb  GraphEvaluation.ipynb  InclinationEvaluation.ipynb  LocalClimateZoneEvaluation.ipynb  PerformanceEvaluation.ipynb  SensitivityAnalysis.ipynb  StreetTheory.ipynb
src/: backend.py  config.py  digital_surface_model.py  dsm_download.py  evaluation_backend.py  graph_modeling.py  hexagon_grid.py  poi_data.py  shadow_analysis.py  walking_speed_robustness_evaluation.py
tests/: test_digital_surface_model.py  test_graph_modeling.py  test_hexagon_grid.py  test_shadow_analysis.py
(+242 files in other folders)
